--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,22 +4,21 @@
     android:layout_width="match_parent"
     android:layout_margin="15dp"
     android:layout_height="match_parent">
-
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/login_email"
-        android:text="Email"/>
+        android:hint="Email"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/login_password"
-        android:text="Password"/>
+        android:hint="Password"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/login_button"
+        android:id="@+id/login_button_in_login_layout"
         android:gravity="center_horizontal"
         android:text="Login"/>
 
