--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_margin="15dp"
+    android:alpha="0.5"
     android:layout_height="match_parent">
     <EditText
         android:layout_width="match_parent"
@@ -13,13 +14,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/login_password"
+        android:inputType="textPassword"
         android:hint="Password"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/login_button_in_login_layout"
+        android:id="@+id/login_button"
         android:gravity="center_horizontal"
         android:text="Login"/>
-
 </LinearLayout>
