--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -3,21 +3,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_margin="15dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:alpha="0.5">
+
     <EditText
         android:id="@+id/registr_username"
         android:layout_width="match_parent"
         android:hint="Username"
-        android:layout_height="wrap_content"/>
-    <EditText
-        android:id="@+id/registr_name"
-        android:layout_width="match_parent"
-        android:hint="Name"
-        android:layout_height="wrap_content"/>
-    <EditText
-        android:id="@+id/registr_surname"
-        android:layout_width="match_parent"
-        android:hint="Surname"
         android:layout_height="wrap_content"/>
     <EditText
         android:id="@+id/registr_email"
@@ -25,6 +17,7 @@
         android:hint="Email"
         android:layout_height="wrap_content"/>
     <EditText
+        android:id="@+id/registr_password"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:hint="Password"
